--- a/src/pages/LargeCardsList/large-cards-list.module.css
+++ b/src/pages/LargeCardsList/large-cards-list.module.css
@@ -13,12 +13,26 @@
   margin: 10px;
 }
 
+@media (max-width: 991px) {
+  .main-panel {
+    width: 340px;
+    margin: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .main-panel {
+    width: 100%;
+    margin: 10px;
+  }
+}
+
 .main-panel .item {
   margin: 10px 0;
 }
 
 .main-panel img {
-  width: 300px;
+  width: 100%;
   height: 200px;
   object-fit: revert;
   box-shadow: 0px 1px 5px gray;
